Fixed CSS for users list on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -520,6 +520,7 @@ textarea {
     .list-header {
         flex-direction: column;
         justify-content: start;
+        overflow-wrap: anywhere;
     }
 
     .system-header {
